@@ -80,6 +80,7 @@ Mr. & Mrs. Pac-Man Pinball (alternate version)
 Odin (Prototype)
 Pinball Champ (French Speech)
 Pin-Bot J-2 (PEMBOT (no relation)) (MOD)
+Royal Flush Deluxe rev. 1
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
 Shadow, The LF-4 (French)
 Spirit (initial release) & rev. 3 (MOD)
